--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cyberdrop-dl"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["wmw <github.com/wmw9>"]
 edition = "2018"
 description = "Cyberdrop.me album downloader written in Rust"
@@ -15,7 +15,7 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
 scraper = "0.12.0"
 byte-unit = "4.0.12"
 indicatif = "0.16.2"
