--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,7 @@ scraper = "0.12.0"
 byte-unit = "4.0.12"
 indicatif = "0.16.2"
 url = "2.2.2"
+bytes = "1.0.1"
+futures = "0.3.15"
 [dev-dependencies]
 tokio-test = "0.4.2"
